# cmake-sdl2-starter

./: .gitignore  CMakeLists.txt  README.md  lib.cpp  main.cpp
lib/: CMakeLists.txt  lib.h
src/: main.cpp
